--- a/index.html
+++ b/index.html
@@ -4,16 +4,110 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Shop</title>
+    <link rel="stylesheet" href="flower-shop.css">
 </head>
 <body>
-    <header>
-
+    <header class="header">
+        <div class="banner">
+        <div>
+            <h1 class="title1">Let's make beautiful flowers a part of your life.</h1>
+            <p class="titleDescription">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+            <button class="btn-primary">Shop Now</button>
+        </div>
+        <img class="tulip"  src="Flower Asset/pngwing 10.png" alt="">
+        </div>
     </header>
     <main>
+        <section class="Flowers">
+            <h3 class="sectionTitle">Our Featured Flowers</h3>
+            <p class="sectionDescription">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <div class="flowerImage">
+            <img class="pink" src="Flower Asset/pngwing 6.png" alt="">
+            <img class="pinkRed" src="Flower Asset/pngwing 5.png" alt="">
+            <img class="yellow" src="Flower Asset/pngwing 7.png" alt="">
+            </div>
+            <ul class="pinkflower">
+            <li><a href="">Pink Flower Tree</a></li>
+            <li><a href="">Pink Flower Tree</a></li>
+            <li><a href="">Pink Flower Tree</a></li>
+            </ul>
+        </section>
+        <section class="offerBanner">
+            <div>
+                <h3 class="bannerTitle">Hot Deal ! Sale Up To 25% <span class="otherColor">Off</span></h3>
+                <p class="bannerDescription">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <button class="btn-secondary">Sign Up</button>
+            </div>
+            <div>
+            <img class="tulip"  src="Flower Asset/pngwing 8.png" alt="">
+        </div>
+        </section>
+        <section class="socialmedia">
+            <h3 class="mediaTitle">Instagram</h3>
+            <p class="mediaDescription">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <div class="fourImage">
+                <div class="Rectangle">
+            <img src="Flower Asset/Flower 01.png" style="width: 200px;" alt="">
+        </div>
+        <div class="Rectangle">
+            <img src="Flower Asset/Rectangle 4.png" style="width: 200px;" alt="">
+        </div>
+        <div class="Rectangle">
+            <img src="Flower Asset/Rectangle 5.png" style="width: 200px;" alt="">
+        </div>
+        <div class="Rectangle">
+            <img src="Flower Asset/Rectangle 6.png" style="width: 200px;" alt="">
+        </div>
+            </div>
+        </section>
+        <section class="imgBacground">
+            <div class="Bacground">
+            <!-- <img class="backgroundimg" src="Flower Asset/Rectangle 9.png" alt="" style="width: 900px;padding-left: 190px;"> -->
+            <div class="newTitle">
+            <h3>Get The Latest Deals</h3>
+            </div>
+            <div class="newDescription">
+                <p>$30 coupon for first shopping</p> 
+            </div>
+            <div style="display: inline-block;">
+                <input type="email" placeholder="Enter your email here...." class="form" style="margin-left: 60px;">
+                <!-- <button class="form" style="margin-left: 60px;">Enter your email here....</button> -->
+                <button class="btn-thirdly" style="margin-bottom: 60px;">Subscribe</button>
+                
 
+            </div>
+            <div>
+                <!-- <input type="email" placeholder="Enter your email here...." class="form" style="margin-left: 60px;> -->
+
+            </div>
+
+        </section>
+        <section class="customarpoll">
+            <div class="summary">
+                <details>
+                    <summary><h3>Thanks For Visting Our Site</h3></summary>
+                    <p>Dear valued customer, we are absolutely thrilled and overjoyed that you took the time to visit our website! We cannot express enough how grateful we are for your presence. Your visit means the world to us as it signifies your interest in our products and services. Once again, thank you from the bottom of our hearts for choosing us!</p>
+                </details>
+                <h3>Your Favourite Flower</h3>
+                <select name="" id="">
+                    <option value="Rose">Rose</option>
+                    <option value="Lotus">Lotus</option>
+                    <option value="Lily">Lily</option>
+                    <option value="Sunflower">Sunflower</option>
+                    <option value="Orchid">Orchid</option>
+                    <option value="Jasmine">Jasmine</option>
+                </select>
+                <h3>Your Opinion</h3>
+                <input type="text" class="box">
+                <br>
+                <input type="submit">
+            </div>
+        </section>
     </main>
-    <footer>
-        
+    <footer class="footer">
+        <h3 class="footerTitle"> <span class="otherColor">Flower</span>Shop</h3>
+        <p class="footerDescription">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        <p class="footerright">@2020-2023, FlowerShop.com. All rights reserved. </p>
     </footer>
 </body>
 </html>
