--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img class="pinkRed" src="Flower Asset/pngwing 5.png" alt="">
             <img class="yellow" src="Flower Asset/pngwing 7.png" alt="">
             </div>
-            <ul class="pinkflower">
+            <ul class="pinkflower" style="color: #000000;">
             <li><a href="">Pink Flower Tree</a></li>
             <li><a href="">Pink Flower Tree</a></li>
             <li><a href="">Pink Flower Tree</a></li>
